namespace ChainOfResponsibilityPattern;

internal class Request
{
    public string RequestType { get; set; }

    public string RequestContent { get; set; }

    public int RequestNum { get; set; }
}
